--- a/index.html
+++ b/index.html
@@ -65,32 +65,32 @@
             </div>
         </div>
         <div class="videos">
-            <div class="songname"> <iframe id="playerYouTube" class="ng-star-inserted" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="300px" src="https://www.youtube.com/embed/?controls=0&amp;autohide=1&amp;rel=0&amp;showinfo=0&amp;iv_load_policy=3&amp;disablekb=1&amp;enablejsapi=1&amp;widget_referrer=https%3A%2F%2Fvk.com%2F&amp;origin=https%3A%2F%2Fuser14260387-jwhtuyga.wormhole.vk-apps.com&amp;widgetid=1"></iframe>
+            <div class="songname"> 
                 <p>Название песни</p>
             </div>
         </div>
         <div class="videos">
-            <div class="songname"> <iframe id="playerYouTube" class="ng-star-inserted" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="300px" src="https://www.youtube.com/embed/?controls=0&amp;autohide=1&amp;rel=0&amp;showinfo=0&amp;iv_load_policy=3&amp;disablekb=1&amp;enablejsapi=1&amp;widget_referrer=https%3A%2F%2Fvk.com%2F&amp;origin=https%3A%2F%2Fuser14260387-jwhtuyga.wormhole.vk-apps.com&amp;widgetid=1"></iframe>
+            <div class="songname">
                 <p>Название песни</p>
             </div>
         </div>
         <div class="videos">
-            <div class="songname"> <iframe id="playerYouTube" class="ng-star-inserted" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="300px" src="https://www.youtube.com/embed/?controls=0&amp;autohide=1&amp;rel=0&amp;showinfo=0&amp;iv_load_policy=3&amp;disablekb=1&amp;enablejsapi=1&amp;widget_referrer=https%3A%2F%2Fvk.com%2F&amp;origin=https%3A%2F%2Fuser14260387-jwhtuyga.wormhole.vk-apps.com&amp;widgetid=1"></iframe>
+            <div class="songname"> 
                 <p>Название песни</p>
             </div>
         </div>
         <div class="videos">
-            <div class="songname"> <iframe id="playerYouTube" class="ng-star-inserted" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="300px" src="https://www.youtube.com/embed/?controls=0&amp;autohide=1&amp;rel=0&amp;showinfo=0&amp;iv_load_policy=3&amp;disablekb=1&amp;enablejsapi=1&amp;widget_referrer=https%3A%2F%2Fvk.com%2F&amp;origin=https%3A%2F%2Fuser14260387-jwhtuyga.wormhole.vk-apps.com&amp;widgetid=1"></iframe>
+            <div class="songname">
                 <p>Название песни</p>
             </div>
         </div>
         <div class="videos">
-            <div class="songname"> <iframe id="playerYouTube" class="ng-star-inserted" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="300px" src="https://www.youtube.com/embed/?controls=0&amp;autohide=1&amp;rel=0&amp;showinfo=0&amp;iv_load_policy=3&amp;disablekb=1&amp;enablejsapi=1&amp;widget_referrer=https%3A%2F%2Fvk.com%2F&amp;origin=https%3A%2F%2Fuser14260387-jwhtuyga.wormhole.vk-apps.com&amp;widgetid=1"></iframe>
+            <div class="songname">
                 <p>Название песни</p>
             </div>
         </div>
         <div class="videos">
-            <div class="songname"> <iframe id="playerYouTube" class="ng-star-inserted" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="300px" src="https://www.youtube.com/embed/?controls=0&amp;autohide=1&amp;rel=0&amp;showinfo=0&amp;iv_load_policy=3&amp;disablekb=1&amp;enablejsapi=1&amp;widget_referrer=https%3A%2F%2Fvk.com%2F&amp;origin=https%3A%2F%2Fuser14260387-jwhtuyga.wormhole.vk-apps.com&amp;widgetid=1"></iframe>
+            <div class="songname">
                 <p>Название песни</p>
                 
             </div>
@@ -460,14 +460,4 @@
 
     .videos:hover {
         outline: 2px solid #FF7800;
-    }
-
-    iframe {
-        width: 120px;
-        height: 68px;
-        margin-top: -38px;
-        margin-left: -12px;
-        display: inline-block;
-        float: left;
-        border-radius: 3px;
     }
